src/main/java/com/example/crud/demo/domain/DTO/errors/execptions/FieldErrorsExceptions.java
package com.example.crud.demo.domain.DTO.errors.execptions;

public class FieldErrorsExceptions extends RuntimeException {

  public FieldErrorsExceptions(String msg) {
    super(msg);
  }
}
